# mcp_server_gdb

./: .cursorrules  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml  rust.yml
src/: config.rs  error.rs  gdb.rs  main.rs  models.rs  tools.rs
src/mi/: commands.rs  mod.rs  output.rs
src/ui/: asm.rs  bt.rs  hexdump.rs  mapping.rs  mod.rs  output.rs  registers.rs  stack.rs  title.rs
