[package]
name = "mcp_server_gdb"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.44", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
regex = "1.10"
uuid = { version = "1.7", features = ["v4", "serde"] }
clap = { version = "4.5",  features = ["derive"] }
dotenv = "0.15"
mcp-core = { version = "0.1",  features = ["sse"] }
mcp-core-macros = "0.1"
schemars = "0.8"
