[package]
name = "mcp_server_gdb"
version = "0.1.0"
edition = "2024"
default-run = "mcp_server_gdb"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
uuid = { version = "1.7", features = ["v4", "serde"] }
clap = { version = "4.5",  features = ["derive"] }
dotenv = "0.15"
mcp-core = { version = "0.1",  features = ["sse"] }
mcp-core-macros = "0.1"
schemars = "0.8"

[[bin]]
name = "mcp_server_gdb"
path = "src/main.rs"

[[bin]]
name = "gdb_client"
path = "src/bin/gdb_client.rs"

[[bin]]
name = "test_app"
path = "src/bin/test_app.rs"

[profile.release]
strip = "debuginfo"
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
debug-assertions = false
overflow-checks = false
