[package]
authors = ["Lix Zhou <xeontz@gmail.com>"]
description = "A GDB/MI protocol server based on the MCP protocol, providing remote application debugging capabilities"
name = "mcp-server-gdb"
version = "0.2.3"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pansila/mcp_server_gdb"
homepage = "https://github.com/pansila/mcp_server_gdb"
keywords = ["MCP", "tool", "AI", "LLM", "Agent"]
categories = ["command-line-utilities"]
default-run = "mcp-server-gdb"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
clap = { version = "4.5",  features = ["derive"] }
dotenv = "0.15"
mcp-core = { version = "0.1",  features = ["sse"] }
mcp-core-macros = "0.1"
schemars = "0.8"
nom = "8.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["process", "signal"] }
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "mcp-server-gdb"
path = "src/main.rs"

[[bin]]
name = "gdb_client"
path = "src/bin/gdb_client.rs"

[[bin]]
name = "test_app"
path = "src/bin/test_app.rs"

[profile.release]
strip = "debuginfo"
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
debug-assertions = false
overflow-checks = false
